docs-archive/apache-airflow-providers-fab/3.2.0/_sources/_api/airflow/providers/fab/auth_manager/fab_auth_manager/index.rst.txt
airflow.providers.fab.auth_manager.fab_auth_manager
===================================================

.. py:module:: airflow.providers.fab.auth_manager.fab_auth_manager


Attributes
----------

.. autoapisummary::

   airflow.providers.fab.auth_manager.fab_auth_manager.CACHE_TTL


Classes
-------

.. autoapisummary::

   airflow.providers.fab.auth_manager.fab_auth_manager.FabAuthManager


Module Contents
---------------

.. py:data:: CACHE_TTL

.. py:class:: FabAuthManager(context=None)

   Bases: :py:obj:`airflow.api_fastapi.auth.managers.base_auth_manager.BaseAuthManager`\ [\ :py:obj:`airflow.providers.fab.auth_manager.models.User`\ ]


   Flask-AppBuilder auth manager.

   This auth manager is responsible for providing a backward compatible user management experience to users.


   .. py:attribute:: cache
      :type:  cachetools.TTLCache


   .. py:attribute:: appbuilder
      :type:  airflow.providers.fab.www.extensions.init_appbuilder.AirflowAppBuilder | None
      :value: None



   .. py:method:: init_flask_resources()


   .. py:property:: apiserver_endpoint
      :type: str



   .. py:method:: get_cli_commands()
      :staticmethod:


      Vends CLI commands to be included in Airflow CLI.



   .. py:method:: get_fastapi_app()

      Get the FastAPI app.



   .. py:method:: get_api_endpoints()


   .. py:method:: get_user()

      Return the user associated to the user in session.

      Attempt to find the current user in g.user, as defined by the kerberos authentication backend.
      If no such user is found, return the `current_user` local proxy object, linked to the user session.




   .. py:property:: session


   .. py:method:: deserialize_user(token)

      Create a user object from dict.



   .. py:method:: serialize_user(user)

      Create a subject and extra claims dict from a user object.



   .. py:method:: is_logged_in()

      Return whether the user is logged in.



   .. py:method:: create_token(headers, body)

      Create a new token from a payload.

      By default, it uses basic authentication (username and password).
      Override this method to use a different authentication method (e.g. oauth).

      :param headers: request headers
      :param body: request body



   .. py:method:: is_authorized_configuration(*, method, user, details = None)

      Return whether the user is authorized to perform a given action on configuration.

      :param method: the method to perform
      :param user: the user to performing the action
      :param details: optional details about the configuration



   .. py:method:: is_authorized_connection(*, method, user, details = None)

      Return whether the user is authorized to perform a given action on a connection.

      :param method: the method to perform
      :param user: the user to performing the action
      :param details: optional details about the connection



   .. py:method:: is_authorized_dag(*, method, user, access_entity = None, details = None)

      Return whether the user is authorized to access the dag.

      There are multiple scenarios:

      1. ``method`` is "GET" and no details are provided which means the user wants to list Dags (or sub entities of Dags).
      2. ``access_entity`` is not provided which means the user wants to access the DAG itself and not a sub
          entity (e.g. Task instances).
      3. ``access_entity`` is provided which means the user wants to access a sub entity of the DAG
          (e.g. DAG runs).

          a. If ``method`` is GET, then check the user has READ permissions on the DAG and the sub entity.
          b. Else, check the user has EDIT permissions on the DAG and ``method`` on the sub entity.

      :param method: The method to authorize.
      :param user: The user performing the action.
      :param access_entity: The dag access entity.
      :param details: The dag details.



   .. py:method:: is_authorized_backfill(*, method, user, details = None)

      Return whether the user is authorized to perform a given action on a backfill.

      :param method: the method to perform
      :param user: the user to performing the action
      :param details: optional details about the backfill



   .. py:method:: is_authorized_asset(*, method, user, details = None)

      Return whether the user is authorized to perform a given action on an asset.

      :param method: the method to perform
      :param user: the user to performing the action
      :param details: optional details about the asset



   .. py:method:: is_authorized_asset_alias(*, method, user, details = None)

      Return whether the user is authorized to perform a given action on an asset alias.

      :param method: the method to perform
      :param user: the user to perform the action on
      :param details: optional details about the asset alias



   .. py:method:: is_authorized_pool(*, method, user, details = None)

      Return whether the user is authorized to perform a given action on a pool.

      :param method: the method to perform
      :param user: the user to performing the action
      :param details: optional details about the pool



   .. py:method:: is_authorized_variable(*, method, user, details = None)

      Return whether the user is authorized to perform a given action on a variable.

      :param method: the method to perform
      :param user: the user to performing the action
      :param details: optional details about the variable



   .. py:method:: is_authorized_view(*, access_view, user)

      Return whether the user is authorized to access a read-only state of the installation.

      :param access_view: the specific read-only view/state the authorization request is about.
      :param user: the user to performing the action



   .. py:method:: is_authorized_custom_view(*, method, resource_name, user)

      Return whether the user is authorized to perform a given action on a custom view.

      A custom view can be a view defined as part of the auth manager. This view is then only available when
      the auth manager is used as part of the environment. It can also be a view defined as part of a
      plugin defined by a user.

      :param method: the method to perform.
          The method can also be a string if the action has been defined in a plugin.
          In that case, the action can be anything (e.g. can_do).
          See https://github.com/apache/airflow/issues/39144
      :param resource_name: the name of the resource
      :param user: the user to performing the action



   .. py:method:: filter_authorized_menu_items(menu_items, user)

      Filter menu items based on user permissions.

      :param menu_items: list of all menu items
      :param user: the user



   .. py:method:: get_authorized_connections(*, user, method = 'GET', session = NEW_SESSION)

      Get connection ids (``conn_id``) the user has access to.

      Fab auth manager does not allow fine-grained access with connections. Thus, return all the connection ids.

      :param user: the user
      :param method: the method to filter on
      :param session: the session



   .. py:method:: get_authorized_dag_ids(*, user, method = 'GET', session = NEW_SESSION)

      Get DAGs the user has access to.

      :param user: the user
      :param method: the method to filter on
      :param session: the session



   .. py:method:: get_authorized_pools(*, user, method = 'GET', session = NEW_SESSION)

      Get pools the user has access to.

      Fab auth manager does not allow fine-grained access with pools. Thus, return all the pool names.

      :param user: the user
      :param method: the method to filter on
      :param session: the session



   .. py:method:: get_authorized_variables(*, user, method = 'GET', session = NEW_SESSION)

      Get variable keys the user has access to.

      Fab auth manager does not allow fine-grained access with variables. Thus, return all the variable keys.

      :param user: the user
      :param method: the method to filter on
      :param session: the session



   .. py:property:: security_manager
      :type: airflow.providers.fab.auth_manager.security_manager.override.FabAirflowSecurityManagerOverride


      Return the security manager specific to FAB.



   .. py:method:: get_url_login(**kwargs)

      Return the login page url.



   .. py:method:: get_url_logout()

      Return the logout page url.



   .. py:method:: register_views()


   .. py:method:: get_extra_menu_items(*, user)

      Provide additional links to be added to the menu.

      :param user: the user



   .. py:method:: get_db_manager()
      :staticmethod:


      Specify the DB manager path needed to run the auth manager.

      This is optional and not all auth managers require a DB manager.



